apps/torrent/sonarr/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sonarr
  name: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
        - image: lscr.io/linuxserver/sonarr:4.0.10
          name: sonarr
          ports:
            - containerPort: 8989
              name: http
          volumeMounts:
            - mountPath: /config
              name: config-volume
            - mountPath: /downloads
              name: download-volume
            - mountPath: /tv
              name: tv-volume
      volumes:
        - name: config-volume
          persistentVolumeClaim:
            claimName: sonarr-config-pvc
        - name: download-volume
          persistentVolumeClaim:
            claimName: qbittorrent-download-pvc
        - name: tv-volume
          persistentVolumeClaim:
            claimName: sonarr-tv-pvc
