apps/torrent/sonarr/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr-service
spec:
  ports:
    - name: http
      port: 8989
      protocol: TCP
      targetPort: http
  selector:
    app: sonarr
  type: ClusterIP
